Prevent crash after 87dd80da75f5b2425ff8f04954a87650cb7be790 If inserting a textshape, the qtextdocument is now modified which made a rootarea to be created We need to explicitly set the root area to 0 whenever setting the document. Even if it's the same document.

BUG:301421