libs/textlayout/KoTextShapeData.cpp
@@ -127,6 +127,10 @@ void KoTextShapeData::setDocument(QTextDocument *document, bool transferOwnershi
         }
     }
 
+    // After setting the document (even if not changing it) we need to explicitly set the root area
+    // to 0. Otherwise crashes may occur when inserting textshape in words (or resetting document)
+    d->rootArea = 0;
+
     if (d->document == document)
         return;
     d->document = document;
